	  and simpler.  However, the C code intermixed with SVC calls was
	  not properly preserving registers.  The more complex, assembly
	  language version does not suffer from these issues.  I believe
	  the the kernel build can not be called "feature complete"
	  (2013-03-23).
	* binfmt/binfmt_execmodule.c:  Here is a place where I forget
	  to update the call to sched_releasetcb() to pass the thread
	  type as the second parameter (2013-03-23).
	* arch/arm/src/lm, kinetis, lpc32, and nuc1xx:  Add kernel build
	  support to all ARMv7-M and ARMv6-M chips.  There are no
	  configurations in place to to verify these additions!
	  (2013-03-24).
	* arch/arm/src/lm/lm_gpio.h:  Correct typos in alternate function
	  definitions (2013-03-24).
	* arch/arm/src/lm/lm_lowputc.c and lm_serial.c:  Add support for
	  the 7 UARTs on the LM4F120 (2013-03-24).
	* configs/lm4f120-launchpad/ostest/defconfig:  Fix the configured
	  RAM size.  This appears to be the last show-stopper bug:  The
	  LaunchPad now runs NuttX!  (2013-03-24).
	* configs/lm4f120-launchpad/nsh:  Add an NSH configuration for the
	  LaunchPad (2013-03-24).
	* configs/kwikstik-k40:  Converted configurations to use the
	  konfig-frontends tool (2013-03-25).
	* configs/twr-k60n512:  Converted configurations to use the
	  konfig-frontends tool (2013-03-25).
	* arch/arm/src/lpc17xx/lpc17_lcd.c:  Add an LCD framebuffer drier
	  for the LPC177x/8x family (2103-3-26).
	* arch/arm/src/lpc17xx/lpc17_emc.c and
	  configs/open1788/src/lpc17_sdraminitialize.c:  Began testing the
	  Open1788 SDRAM.  The SDRAM is basically functional, but there are
	  failures with the SDRAM is stressed by the memory test at
	  apps/example/ramtest (SDRAM support and the RAM test can be configured
	  into the base configs/open1788/nsh configuration as described in
	  configs/open1788/READMT.txt (2103-3-27).
	* configs/open1788/nxlines:  Add a configuration to test both the
	  Open1788 LCD and SDRAM which is used as a framebuffer (2013-3-27).