@@ -4468,3 +4468,6 @@
 	  configs/open1788/READMT.txt (2103-3-27).
 	* configs/open1788/nxlines:  Add a configuration to test both the
 	  Open1788 LCD and SDRAM which is used as a framebuffer (2013-3-27).
+	* arch/arm/src/lpc17xx/lpc17_gdma.c and lpc17_sdcard.c:  Began
+	  implementation of the LPC17 DMA and integration into the SDCARD
+	  driver (2013-3029).
